<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="property">Property</string>
...
    <!-- TODO: Not hints, rename -->
    <string name="schedule_button_hint">Scheduled time</string>
    <string name="deadline_button_hint">Deadline time</string>
    <string name="closed_button_hint">Closed time</string>

    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>

    <string name="move">Move</string>

    <string name="cut">Cut</string>
...
    <string name="new_note">New note</string>
    <string name="quick_note">Quick note</string>
    <string name="tap_to_create_new_note">Tap to create a new note</string>
    <string name="options_menu_item_search">Search</string>

    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
    <string name="version">What\'s new</string>
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
...

    <string name="getting_started_notebook_name">Getting Started with Orgzly</string>
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
    <string name="reload_getting_started_summary">Import the latest version of the notebook</string>
    <string name="notebook_imported">Notebook imported</string>

    <string name="book_does_not_exist_anymore">This notebook does not exist any more.</string>
    <string name="note_does_not_exist_anymore">This note does not exist any more.</string>
    <string name="search_does_not_exist_anymore">This search does not exist any more.</string>

    <string name="repo_dropbox_button_not_linked">Link to Dropbox</string>
    <string name="repo_dropbox_button_linked">Unlink from Dropbox</string>

...
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

...

    <string name="cycle_visibility">Fold/Unfold All</string>
    <string name="widen_view">Widen View</string>
    <string name="narrow">Narrow to Subtree</string>
    <string name="note_has_been_modified">Note modified</string>
    <string name="discard_or_save_changes">Save changes?</string>
    <string name="rename">Rename</string>
    <string name="rename_book">Rename %s</string>
    <string name="failed_renaming_book">Failed renaming notebook</string>
    <string name="failed_renaming_book_with_reason">Renaming failed: %s</string>
    <string name="renamed_book_from">Renamed from “%s”</string>

    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="also_delete_linked_books">Delete any linked remote notebooks</string>
    <string name="message_deleting_book_failed">Deleting notebook(s) failed: %s</string>
    <string name="message_book_deleted">Notebook(s) deleted</string>

    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

...
    <string name="light_scheme">Light scheme</string>
    <string name="dark_scheme">Dark scheme</string>
    <string name="monospaced_font">Monospaced font</string>
    <string name="monospaced_font_summary">Use monospaced font for note\'s content and notebook\'s preface</string>
    <string name="reversed_note_click_action">Swap note click and long-click actions</string>
    <string name="reversed_note_click_action_summary">Click to select note, long-click to open</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="notes_list">List of notes</string>
    <string name="prefs_title_new_note">New note</string>
    <string name="prefs_title_notifications">Notifications</string>
    <string name="app">App</string>
    <string name="test_connection">Test connection</string>
    <string name="connecting">Connecting…</string>
...
    <string name="pref_title_snooze_type">Snooze type</string>

    <string name="pref_title_daily_reminder_time">Daily reminder time</string>

    <string name="primary_storage">Main storage</string>

    <string name="book_exported">Notebook exported to %s</string>

    <string name="failed_exporting_book">Failed exporting notebook: %s</string>
    <string name="failed_importing_book">Failed importing notebook: %s</string>

    <string name="edit_book_preface">Edit preface</string>
    <string name="file_tags">Tags</string>
...

    <string name="pref_title_repo_update_sync">Repositories modified (not implemented yet)</string>
    <string name="pref_summary_repo_update_sync">Sync whenever an update in repositories is detected</string>

    <string name="not_modified">Not modified</string>

    <string name="notes_count_zero">Contains no notes</string>
    <plurals name="notes_count_nonzero">
        <item quantity="one">Contains <b>%d</b> note</item>
        <item quantity="other">Contains <b>%d</b> notes</item>
    </plurals>

    <plurals name="found_number_of_notebooks">
...
